deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-web
      version: v2
  template:
    metadata:
      labels:
        app: simple-web
        version: v2
    spec:
      containers:
      - name: simple-web
        image: 7aces/simple-web:v2
        ports:
        - containerPort: 80
