service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-web-service
spec:
  selector:
    app: simple-web
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
