destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: simple-web
spec:
  host: simple-web-service
  subsets:

  - name: v1
    labels:
      version: v1

  - name: v2
    labels:
      version: v2
