ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-web-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: simple-web.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-web-service
            port:
              number: 80
