vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: simple-web
spec:
  hosts:
  - "*"

  gateways:
  - simple-web-gateway

  http:
  - route:

    - destination:
        host: simple-web-service
        subset: v1
      weight: 0

    - destination:
        host: simple-web-service
        subset: v2
      weight: 100
